--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,10 @@
   		<artifactId>akka-actor_2.11</artifactId>
   		<version>2.4.7</version>
   	</dependency>
+  	<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.16.8</version>
+</dependency>
   </dependencies>
 </project>
