--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,12 @@
 			<version>3.3.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.fusesource.mqtt-client</groupId>
+			<artifactId>mqtt-client</artifactId>
+			<version>1.12</version>
+		</dependency>
+
+
 	</dependencies>
 </project>
