--- a/pom.xml
+++ b/pom.xml
@@ -40,13 +40,11 @@
 			<artifactId>vertx-web</artifactId>
 			<version>3.3.2</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.eclipse.paho/org.eclipse.paho.client.mqttv3 -->
 		<dependency>
-			<groupId>org.fusesource.mqtt-client</groupId>
-			<artifactId>mqtt-client</artifactId>
-			<version>1.12</version>
+			<groupId>org.eclipse.paho</groupId>
+			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+			<version>1.1.0</version>
 		</dependency>
-
-
 	</dependencies>
 </project>
