--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
 			<artifactId>onejar-maven-plugin</artifactId>
 			<version>1.4.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.jmdns/jmdns -->
+		<dependency>
+			<groupId>javax.jmdns</groupId>
+			<artifactId>jmdns</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
